<resources>
    <string name="app_name">Shopping Cart</string>

<!--    Top Navigation Menu-->
    <string name="top_navigation_menu_search">Search</string>
    <string name="top_navigation_menu_notifications">Notifications</string>
    <string name="top_navigation_menu_wishlist">Wishlist</string>
    <string name="top_navigation_menu_logout">Logout</string>
<!--    Bottom Navigatiom Menu-->
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_all_category">All Category</string>
    <string name="bottom_navigation_menu_cart">Cart</string>
    <string name="bottom_navigation_menu_my_account">My Account</string>
</resources>
