<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_menu_home"
        android:title="@string/bottom_navigation_menu_home"
        android:icon="@drawable/baseline_home_black_18dp" />
    <item
        android:id="@+id/bottom_navigation_menu_all_category"
        android:title="@string/bottom_navigation_menu_all_category"
        android:icon="@drawable/baseline_category_black_18dp" />
    <item
        android:id="@+id/bottom_navigation_menu_cart"
        android:title="@string/bottom_navigation_menu_cart"
        android:icon="@drawable/baseline_shopping_cart_black_18dp" />
    <item
        android:id="@+id/bottom_navigation_menu_my_account"
        android:title="@string/bottom_navigation_menu_my_account"
        android:icon="@drawable/baseline_person_black_18dp" />
</menu>