<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/top_navigation_menu_search"
        android:title="@string/top_navigation_menu_search"
        android:icon="@drawable/baseline_person_black_18dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_navigation_menu_notifications"
        android:title="@string/top_navigation_menu_notifications"
        android:icon="@drawable/baseline_shopping_cart_black_18dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_navigation_menu_wishlist"
        android:title="@string/top_navigation_menu_wishlist"
        android:icon="@drawable/baseline_category_black_18dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/top_navigation_menu_logout"
        android:title="@string/top_navigation_menu_logout"
        android:icon="@drawable/baseline_home_black_18dp"
        app:showAsAction="ifRoom" />
</menu>